# htmx-playground

./: .gitignore  README.md  alembic.ini  main.py  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2022_10_19_1450-f7939df47871_creating_initial_tables.py  2022_10_19_1623-4aa780bf0c24_adding_an_update_date_column.py
htmx/: settings.py  urls.py
htmx_django/: asgi.py  settings.py  urls.py  wsgi.py
htmx_fastapi/: database.py  main.py
htmx_fastapi/templates/: base.html  index.html  widget.html
templates/: widget.html  widgets.html
widgets/: models.py
widgets/migrations/: 0001_initial.py
widgets/templates/: base.html  index.html  widgets.html
widgets_django/: admin.py  apps.py  urls.py  views.py
