[tool.poetry]
name = "htmx"
version = "0.1.0"
description = "Playing with htmx"
authors = ["Michael Twomey <mick@twomeylee.name>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"
pydantic = "^1.10.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
